--- a/styles/trunfo.css
+++ b/styles/trunfo.css
@@ -33,13 +33,12 @@ h2 {
     color: white;
 }
 
-#carta-jogador, #carta-maquina {
+.carta {
     width: 360px;
     height: 500px;
     overflow: auto;
     border-radius: 10px;
-    margin-bottom: 20px;
-    margin: 0 auto;
+    margin: 0 auto 20px;
     display: flex;
     align-items: flex-end;
     position: relative;
